src/objects/DRE__DTE_Result__c.object
<CustomObject>
    <fields>
        <fullName>DRE__CPU_Usage__c</fullName>
        <description>CPU time used in milliseconds</description>
        <label>Time (ms)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__DML_Rows_Usage__c</fullName>
        <description>DML rows used</description>
        <label>Database Rows</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__DML_Usage__c</fullName>
        <description>DML statements used</description>
        <label>Database Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__DTE_Plan__c</fullName>
        <label>DTE Plan</label>
        <referenceTo>DRE__DTE_Plan__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>DTE_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DRE__Email_Usage__c</fullName>
        <label>Emails</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__JobId__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Message__c</fullName>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__SOQL_Rows_Usage__c</fullName>
        <description>SOQL rows used</description>
        <label>Query Rows</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__SOQL_Usage__c</fullName>
        <description>SOQL statements used</description>
        <label>Queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DTE Result</label>
    <nameField>
        <displayFormat>DTERES-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>